--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,89 @@
 annotated-types==0.6.0
 anyio==4.3.0
+appnope==0.1.3
+asttokens==2.4.0
+backcall==0.2.0
 blinker==1.7.0
 certifi==2024.2.2
+charset-normalizer==3.2.0
+chess==1.10.0
 click==8.1.7
+cloudpickle==3.0.0
+comm==0.1.4
+contourpy==1.1.1
+cycler==0.12.0
+debugpy==1.8.0
+decorator==5.1.1
 deprecation==2.1.0
+distro==1.9.0
+executing==2.0.0
+filelock==3.12.4
 Flask==3.0.2
+fonttools==4.43.0
+fsspec==2023.10.0
 gotrue==2.1.0
+gym==0.23.1
+gym-notices==0.0.8
 h11==0.14.0
 httpcore==1.0.4
 httpx==0.25.2
 idna==3.6
+ipykernel==6.25.2
+ipython==8.16.1
 itsdangerous==2.1.2
+jedi==0.19.1
 Jinja2==3.1.3
+jupyter_client==8.3.1
+jupyter_core==5.3.2
+kiwisolver==1.4.5
 MarkupSafe==2.1.5
+matplotlib==3.8.0
+matplotlib-inline==0.1.6
+mpmath==1.3.0
+nest-asyncio==1.5.8
+networkx==3.2
+numpy==1.26.0
+openai==1.6.1
 packaging==23.2
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==10.0.1
+platformdirs==3.11.0
 postgrest==0.15.0
+prompt-toolkit==3.0.39
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pydantic==2.6.2
 pydantic_core==2.16.3
+pygame-ce==2.3.2
+Pygments==2.16.1
+pyparsing==3.1.1
 python-dateutil==2.8.2
+pyzmq==25.1.1
 realtime==1.0.2
+requests==2.31.0
+scipy==1.11.3
 six==1.16.0
 sniffio==1.3.0
+SQLAlchemy==2.0.20
+stack-data==0.6.3
+stockfish==3.28.0
 storage3==0.7.0
 StrEnum==0.4.15
 supabase==2.3.6
 supafunc==0.3.3
+sympy==1.12
+torch==2.1.0
+torchaudio==2.1.0
+torchvision==0.16.0
+tornado==6.3.3
+tqdm==4.66.1
+traitlets==5.11.2
 typing_extensions==4.9.0
+urllib3==2.0.5
+uvicorn==0.23.2
+wcwidth==0.2.8
 websockets==11.0.3
 Werkzeug==3.0.1
