--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ distro==1.9.0
 executing==2.0.0
 filelock==3.12.4
 Flask==3.0.2
+flask_cors==4.0.0
 fonttools==4.43.0
 fsspec==2023.10.0
 gotrue==2.1.0
